# PSC-CPI

./: .gitignore  pyproject.toml
code/: model.py  train.py
test/: check_data.ipynb
